--- a/setup.cfg
+++ b/setup.cfg
@@ -8,15 +8,15 @@ omit =
     # Omit generated versioneer
     pyrmsd/_version.py
 
-[yapf]
-# YAPF, in .style.yapf files this shows up as "[style]" header
-COLUMN_LIMIT = 119
-INDENT_WIDTH = 4
-USE_TABS = False
-
 [flake8]
-# Flake8, PyFlakes, etc
-max-line-length = 119
+ignore = E203, E266, E501, W503
+max-line-length = 88
+max-complexity = 18
+select = B,C,E,F,W,T4
+
+[mypy]
+files=best_practices,test
+ignore_missing_imports=true
 
 [versioneer]
 # Automatic version numbering scheme
