--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,22 @@
 # Helper file to handle all configs
 
+[flake8]
+ignore = E203, E266, E501, W503
+max-line-length = 88
+max-complexity = 18
+select = B,C,E,F,W,T4
+exclude=versioneer.py
+
+[mypy]
+files=pyrmsd
+ignore_missing_imports=true
+
+[aliases]
+test = pytest
+
+[tool:pytest]
+testpaths=pyrmsd/tests
+
 [coverage:run]
 # .coveragerc to control coverage.py and pytest-cov
 omit =
@@ -8,16 +25,6 @@ omit =
     # Omit generated versioneer
     pyrmsd/_version.py
 
-[flake8]
-ignore = E203, E266, E501, W503
-max-line-length = 88
-max-complexity = 18
-select = B,C,E,F,W,T4
-
-[mypy]
-files=best_practices,test
-ignore_missing_imports=true
-
 [versioneer]
 # Automatic version numbering scheme
 VCS = git
@@ -25,6 +32,3 @@ style = pep440
 versionfile_source = pyrmsd/_version.py
 versionfile_build = pyrmsd/_version.py
 tag_prefix = ''
-
-[aliases]
-test = pytest
