--- a/.coveragerc
+++ b/.coveragerc
@@ -11,3 +11,6 @@ exclude_lines =
     # Don't complain if non-runnable code isn't run:
     if 0:
     if __name__ == .__main__.:
+
+    # OpenBabel2
+    except ImportError:
