refactor tests out of pyrmsd

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,14 +8,14 @@ select = B,C,E,F,W,T4
 exclude=versioneer.py
 
 [mypy]
-files=pyrmsd
+files=pyrmsd, tests
 ignore_missing_imports=true
 
 [aliases]
 test = pytest
 
 [tool:pytest]
-testpaths=pyrmsd/tests
+testpaths=tests
 
 [coverage:run]
 # .coveragerc to control coverage.py and pytest-cov
