added rdkit to test conda env

--- a/devtools/conda-envs/pyrmsd-all.yaml
+++ b/devtools/conda-envs/pyrmsd-all.yaml
@@ -1,5 +1,6 @@
 name: pyrmsd
 channels:
+  - rdkit
 dependencies:
   # Base
   - python
@@ -7,7 +8,7 @@ dependencies:
   - ipython
 
   # Jupyter
-  - jupyterlab # -c conda-forge
+  - jupyterlab
 
   # Maths
   - numpy
@@ -17,7 +18,8 @@ dependencies:
   - scikit-learn
 
   # Chemistry
-  - openbabel
+  - openbabel 
+  - rdkit
   - qcelemental
 
   # Plotting
