--- a/devtools/conda-envs/pyrmsd-test-obabel.yaml
+++ b/devtools/conda-envs/pyrmsd-test-obabel.yaml
@@ -1,6 +1,6 @@
 name: pyrmsd
 channels:
-  - rdkit
+  - conda-forge
 dependencies:
   # Base
   - python
@@ -12,7 +12,6 @@ dependencies:
 
   # Chemistry
   - openbabel
-  - rdkit
   - qcelemental
 
   # Testing
