--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,29 @@ language: python
 matrix:
   include:
     - os: osx
-      language: generic  # No need to set Python version since its conda
+      language: generic
       env: 
         - PYTHON_VER=3.6
         - CHEM=obabel
     - os: osx
-      language: generic  # No need to set Python version since its conda
+      language: generic
       env: 
         - PYTHON_VER=3.6
         - CHEM=rdkit
     - os: osx
       language: generic
       env: 
-        - PYTHON_VER=3.6
+        - PYTHON_VER=3.7
         - CHEM=obabel
+    - os: osx
+      language: generic
+      env: 
+        - PYTHON_VER=3.7
+        - CHEM=rdkit
 
 
     - os: linux
-      language: generic  # No need to set Python version since its conda 
+      language: generic
       env: 
         - PYTHON_VER=3.6
         - CHEM=obabel
@@ -28,7 +33,17 @@ matrix:
       language: generic
       env: 
         - PYTHON_VER=3.6
+        - CHEM=rdkit
+    - os: linux
+      language: generic
+      env: 
+        - PYTHON_VER=3.7
         - CHEM=obabel
+    - os: linux
+      language: generic
+      env: 
+        - PYTHON_VER=3.7
+        - CHEM=rdkit
 
 before_install:
     # Additional info about the build
