--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,10 +2,22 @@ environment:
   matrix:
     - PYTHON: "C:\\Miniconda36-x64"
       PYTHON_VERSION: "3.6"
+      CHEM: "obabel"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Miniconda36-x64"
+      PYTHON_VERSION: "3.6"
+      CHEM: "rdkit"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.7"
+      CHEM: "obabel"
+      PYTHON_ARCH: "64"
+    
+    - PYTHON: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.7"
+      CHEM: "rdkit"
       PYTHON_ARCH: "64"
 
 install:
@@ -23,7 +35,7 @@ install:
   - conda update --all
 
     # Create test environment for package
-  - python devtools\\scripts\\create_conda_env.py -n=test -p=%PYTHON_VERSION% devtools\\conda-envs\\pyrmsd-all.yaml
+  - python devtools\\scripts\\create_conda_env.py -n=test -p=%PYTHON_VERSION% devtools\\conda-envs\\pyrmsd-test-%CHEM%.yaml
 
     # Activate the test environment
   - activate test
