--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ select = B,C,E,F,W,T4
 exclude=versioneer.py
 
 [mypy]
-files=pyrmsd, tests
+files=spyrmsd, tests
 ignore_missing_imports=true
 
 [isort]
@@ -30,12 +30,12 @@ omit =
     # Omit the tests
     */tests/*
     # Omit generated versioneer
-    pyrmsd/_version.py
+    spyrmsd/_version.py
 
 [versioneer]
 # Automatic version numbering scheme
 VCS = git
 style = pep440
-versionfile_source = pyrmsd/_version.py
-versionfile_build = pyrmsd/_version.py
+versionfile_source = spyrmsd/_version.py
+versionfile_build = spyrmsd/_version.py
 tag_prefix = ''
