separate nx and gt testing

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,21 +3,49 @@ environment:
     - PYTHON: "C:\\Miniconda36-x64"
       PYTHON_VERSION: "3.6"
       CHEM: "obabel"
+      GRAPH: "nx"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Miniconda36-x64"
       PYTHON_VERSION: "3.6"
       CHEM: "rdkit"
+      GRAPH: "nx"
       PYTHON_ARCH: "64"
 
     - PYTHON: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.7"
       CHEM: "obabel"
+      GRAPH: "nx"
       PYTHON_ARCH: "64"
     
     - PYTHON: "C:\\Miniconda37-x64"
       PYTHON_VERSION: "3.7"
       CHEM: "rdkit"
+      GRAPH: "nx"
+      PYTHON_ARCH: "64"
+      
+    - PYTHON: "C:\\Miniconda36-x64"
+      PYTHON_VERSION: "3.6"
+      CHEM: "obabel"
+      GRAPH: "gt"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Miniconda36-x64"
+      PYTHON_VERSION: "3.6"
+      CHEM: "rdkit"
+      GRAPH: "gt"
+      PYTHON_ARCH: "64"
+
+    - PYTHON: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.7"
+      CHEM: "obabel"
+      GRAPH: "gt"
+      PYTHON_ARCH: "64"
+    
+    - PYTHON: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.7"
+      CHEM: "rdkit"
+      GRAPH: "gt"
       PYTHON_ARCH: "64"
 
 install:
@@ -35,7 +63,7 @@ install:
   - conda update --all
 
     # Create test environment for package
-  - python devtools\\scripts\\create_conda_env.py -n=test -p=%PYTHON_VERSION% devtools\\conda-envs\\spyrmsd-test-%CHEM%.yaml
+  - python devtools\\scripts\\create_conda_env.py -n=test -p=%PYTHON_VERSION% devtools\\conda-envs\\spyrmsd-test-%CHEM%-%GRAPH%.yaml
 
     # Activate the test environment
   - activate test
@@ -50,7 +78,6 @@ test_script:
   - pytest -v --cov=spyrmsd tests
 
     # Run checks
-  - black .
   - flake8
   - mypy
 
