add slow tests marker

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,9 @@ test = pytest
 
 [tool:pytest]
 testpaths=tests
+addopts = --strict-markers
+markers =
+    slow
 
 [coverage:run]
 # .coveragerc to control coverage.py and pytest-cov
