--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,7 @@ install:
 
 script:
     # Run test and get coverage report
-  - pytest -v --cov=spyrmsd tests/
+  - pytest -v --cov=spyrmsd tests/ --runslow
 
     # Run checks
   - flake8
