--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,10 @@ jobs:
         wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
         bash Miniconda3-latest-Linux-x86_64.sh -b
         conda env create -f devtools/conda-envs/spyrmsd-test-obabel-nx.yaml
+        conda activate test
+    - name: Install  package
+      run: |
+        python setup.py develop --no-deps
     - name: Lint with flake8 and mypy
       run: |
         flake8 . --count --show-source --statistics
