fix name of conda env

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
         bash Miniconda3-latest-Linux-x86_64.sh -b
         conda env create -f devtools/conda-envs/spyrmsd-test-obabel-nx.yaml
-        conda activate test
+        conda activate spyrmsd
     - name: Install  package
       run: |
         python setup.py develop --no-deps
