init shell for conda

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
         bash Miniconda3-latest-Linux-x86_64.sh -b
+        conda init bash
         conda env create -f devtools/conda-envs/spyrmsd-test-obabel-nx.yaml
         conda activate spyrmsd
     - name: Install  package
