Revert "try conda init"
This reverts commit 6edee457cb4749b0d6fd66080b7dcf6ccdac220a.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,18 @@ jobs:
            environment-file: devtools/conda-envs/spyrmsd-test-obabel-nx.yaml
     - name: Install package
       run: |
+        wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+        bash Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
+        echo ". $HOME/miniconda/etc/profile.d/conda.sh" >> ~/.bashrc
+        echo "conda activate" >> ~/.bashrc
+        source ~/.bashrc
+        conda config --set always_yes yes
+        conda install conda conda-build
+        conda update --quiet --all
+        conda env create -f devtools/conda-envs/spyrmsd-test-obabel-nx.yaml
+        conda activate spyrmsd
+    - name: Install  package
+      run: |
         python setup.py develop --no-deps
     - name: Lint with flake8 and mypy
       run: |
