--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-          python-version: [3.6, 3.7, 3.8]
+          python-version: 3.6
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
