--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dist-name = "spyrmsd"
 description-file = "README.md"
 author = "Rocco Meli"
 author-email = "rocco.meli@biodtp.ox.ac.uk"
-home-page = "https://pyrmsd.readthedocs.io"
+home-page = "https://spyrmsd.readthedocs.io"
 classifiers = [
     "License :: OSI Approved :: MIT License", 
     "Programming Language :: Python :: 3",]
