--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -53,7 +53,7 @@ build: false
 
 test_script:
     # Run test and get coverage report
-  - pytest -v --cov=spyrmsd tests --runslow
+  - pytest -v --cov=spyrmsd tests --benchmark --long
 
     # Run checks
   - flake8
