--- a/.travis.yml
+++ b/.travis.yml
@@ -120,7 +120,7 @@ install:
 
 script:
     # Run test and get coverage report
-  - pytest -v --cov=spyrmsd tests/  --benchmark --large
+  - pytest -v --cov=spyrmsd tests/  --benchmark
 
 after_success:
     # Upload coverage report to codecov
