--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -12,9 +12,14 @@ on:
     # Nightly tests (on master)
     - cron: "0 0 * * *"
 
+defaults:
+  run:
+    # conda setup requires this special shell
+    shell: bash -l {0}
+
 jobs:
   test:
-    name: {{ '${{ matrix.os }}' }}; Python {{ '${{ matrix.python-version }}' }}; {{ '${{ matrix.chemlib }}' }}-{{ '${{ matrix.graphlib }}' }}
+    name: Test {{ '${{ matrix.os }}' }}-{{ '${{ matrix.python-version }}' }}-{{ '${{ matrix.chemlib }}' }}-{{ '${{ matrix.graphlib }}' }}
     runs-on: {{ '${{ matrix.os }}' }}
     strategy:
       matrix:
@@ -39,19 +44,16 @@ jobs:
         environment-file: devtools/conda-envs/spyrmsd-test-{{ '${{ matrix.chemlib }}' }}-{{ '${{ matrix.graphlib }}' }}.yaml
         channels: conda-forge,defaults
         activate-environment: spyrmsd
-        auto-update-conda: false
+        auto-update-conda: true
         auto-activate-base: false
         show-channel-urls: true
+
     - name: Install
-      # conda setup requires this special shell
-      shell: bash -l {0}
       run: |
         python -m pip install . --no-deps
         conda list
 
     - name: Test
-      # conda setup requires this special shell
-      shell: bash -l {0}
       run: |
         pytest -v --cov=spyrmsd --cov-report=xml --color=yes tests/
 
