--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         os: [macOS-latest, ubuntu-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9]
-        chemlib: [openbabel, rdkit]
+        chemlib: [obabel, rdkit]
         graphlib: [nx, gt]
 
     steps:
