--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,6 +27,8 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
         chemlib: [obabel, rdkit]
         graphlib: [nx, gt]
+        exclude:
+        - {os: "windows-latest", graphlib: "nx"}
 
     steps:
     - uses: actions/checkout@v1
