actually exclude gt and not nx

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,7 +28,7 @@ jobs:
         chemlib: [obabel, rdkit]
         graphlib: [nx, gt]
         exclude:
-        - {os: "windows-latest", graphlib: "nx"}
+        - {os: "windows-latest", graphlib: "gt"}
 
     steps:
     - uses: actions/checkout@v1
