run benchmarks as well

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -57,7 +57,7 @@ jobs:
 
     - name: Test
       run: |
-        pytest -v --cov=spyrmsd --cov-report=xml --color=yes tests/
+        pytest -v --benchmark --cov=spyrmsd --cov-report=xml --color=yes tests/
 
     - name: CodeCov
       uses: codecov/codecov-action@v1
