--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -27,6 +27,7 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
         chemlib: [obabel, rdkit]
         graphlib: [nx, gt]
+        # graph-tools does not work on Windows
         exclude:
         - {os: "windows-latest", graphlib: "gt"}
 
