--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install mypy
+        mypy --install-types
     - name: Install  package
       run: |
         python setup.py develop --no-deps
