--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -25,7 +25,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install mypy
-        mypy --install-types
+    - name: Install Types
+      run: |
+        python -m pip install types-requests
     - name: Install  package
       run: |
         python setup.py develop --no-deps
