--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
+        python -m pip install setuptools
+        python -m pip install flake8
     - name: Install  package
       run: |
         python setup.py develop --no-deps
