--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -24,7 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install mypy
+        python -m pip install setuptools
+        python -m pip install mypy
     - name: Install Types
       run: |
         python -m pip install types-requests
