--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -57,8 +57,8 @@ jobs:
     - name: Install
       run: |
         python -m pip install . --no-deps
-        miniconda info
-        miniconda list
+        miniforge info
+        miniforge list
 
     - name: Test
       run: |
