--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -59,8 +59,8 @@ jobs:
     - name: Install
       run: |
         python -m pip install . --no-deps
-        miniforge info
-        miniforge list
+        mamba info
+        mamba list
 
     - name: Test
       run: |
