--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -30,6 +30,7 @@ jobs:
         exclude:
         # graph-tools does not work on Windows
         - {os: "windows-latest", graphlib: "gt"}
+        - {os: "windows-latest", graphlib: "all"}
         - {graphlib: "all", chemlib: "obabel"}
         include:
         - {os: "macOS-14", graphlib: "gt", chemlib: "obabel", python-version: "3.12"}
