Add rustworkx backend (#111)
* Update graph.py to support set_backend function
I also made a fuction to see the available backends and get the current backend

* Apply private _available_backends suggestions from code review

This commit contains the suggested changes regarding making the available_backends variable private, and refactoring the get_available_backends method to available_backends

Co-authored-by: Rocco Meli <r.meli@bluemail.ch>

* Print warning when backend is already set + make sure we use _available_backends everywhere where possible

* remove reliance on environment variables

* make _validate_backend function
print warning when a certain backend isn't installed

* Use precommit hooks
add __all__ back
refactor _alias_backendDict to _alias_to_backend

* Update ValueError message

Co-authored-by: Rocco Meli <r.meli@bluemail.ch>

* Don't return the backend when setting it

Co-authored-by: Rocco Meli <r.meli@bluemail.ch>

* Add dummy function to make mypy happy
remove __all__ assignment

* fist play with rustworkx backend

* add documentation for backend selection

* add cli backend selection

* cleanup

* changelog

* apply @Jnelen suggestion and add warning filter

* make molecule test also more robust

* add rx to ci

* add rustworkx to all backends tests

* add back graphtool

* add rx to test all backends and add verbose mode

* Update test_molecule.py

---------

Co-authored-by: jnelen <jnelen@ucam.edu>
Co-authored-by: Jochem Nelen <78348388+Jnelen@users.noreply.github.com>

--- a/devtools/conda-envs/spyrmsd-test-obabel-rx.yaml
+++ b/devtools/conda-envs/spyrmsd-test-obabel-rx.yaml
@@ -1,7 +1,6 @@
 name: spyrmsd
 channels:
   - conda-forge
-  - rdkit
 dependencies:
   # Base
   - python
@@ -10,12 +9,10 @@ dependencies:
   # Maths
   - numpy
   - scipy
-  - graph-tool
-  - networkx>=2
   - rustworkx
 
   # Chemistry
-  - rdkit
+  - openbabel
 
   # Testing
   - pytest
