--- a/devtools/conda-envs/spyrmsd-test-obabel-rx.yaml
+++ b/devtools/conda-envs/spyrmsd-test-obabel-rx.yaml
@@ -1,7 +1,6 @@
 name: spyrmsd
 channels:
   - conda-forge
-  - rdkit
 dependencies:
   # Base
   - python
@@ -10,10 +9,10 @@ dependencies:
   # Maths
   - numpy
   - scipy
-  - graph-tool
+  - rustworkx
 
   # Chemistry
-  - rdkit
+  - openbabel
 
   # Testing
   - pytest
