--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["flit"]
-build-backend = "flit.buildapi"
+requires = ["flit_core >=2,<4"]
+build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
 module = "spyrmsd"
@@ -12,5 +12,5 @@ home-page = "https://spyrmsd.readthedocs.io"
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",]
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 requires = ["numpy", "scipy", "networkx>=2"]
