--- a/devtools/conda-envs/spyrmsd-test-obabel-nogt.yaml
+++ b/devtools/conda-envs/spyrmsd-test-obabel-nogt.yaml
@@ -1,7 +1,6 @@
 name: spyrmsd
 channels:
   - conda-forge
-  - rdkit
 dependencies:
   # Base
   - python
@@ -11,12 +10,11 @@ dependencies:
   # Maths
   - numpy
   - scipy
-  - graph-tool
   - networkx>=2
   - rustworkx
 
   # Chemistry
-  - rdkit
+  - openbabel
 
   # Testing
   - pytest
