Test all backends together in CI (#118)
* move backend tests

* avoid cached parametrization

* remove conda configs

* make all tests work

* remove mols in favour of fixtures

* make molecules fixtures

* avoid graph-tool on windows

* simplify ci

* mention pip explicitly

* reset backend for good measure

* try no space

* windows

* changelog

* reset backend for every test

* add warning test

* Apply suggestions from code review

* format

--- a/devtools/conda-envs/spyrmsd-test-obabel-all.yaml
+++ b/devtools/conda-envs/spyrmsd-test-obabel-all.yaml
@@ -4,11 +4,14 @@ channels:
 dependencies:
   # Base
   - python
+  - pip
   - setuptools
 
   # Maths
   - numpy
   - scipy
+  - graph-tool
+  - networkx>=2
   - rustworkx
 
   # Chemistry
