docs and pyproject toml

--- a/devtools/conda-envs/spyrmsd-all.yaml
+++ b/devtools/conda-envs/spyrmsd-all.yaml
@@ -16,8 +16,9 @@ dependencies:
   - numpy
   - pandas
   - scipy
-  - networkx>=2
   - graph-tool
+  - rustworkx
+  - networkx>=2
   - scikit-learn
 
   # Chemistry
