--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,4 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",]
 requires-python = ">=3.9"
-requires = ["numpy", "scipy", "networkx>=2"]
+requires = ["numpy", "scipy", "rustworkx"]
