--- a/devtools/conda-envs/spyrmsd-test-obabel-all.yaml
+++ b/devtools/conda-envs/spyrmsd-test-obabel-all.yaml
@@ -1,19 +1,21 @@
 name: spyrmsd
 channels:
   - conda-forge
-  - rdkit
 dependencies:
   # Base
   - python
+  - pip
   - setuptools
 
   # Maths
   - numpy
   - scipy
+  - graph-tool
   - networkx>=2
+  - rustworkx
 
   # Chemistry
-  - rdkit
+  - openbabel
 
   # Testing
   - pytest
